[gd_scene load_steps=8 format=2]

[ext_resource path="res://players/p1.gd" type="Script" id=1]
[ext_resource path="res://players/p1.png" type="Texture" id=2]
[ext_resource path="res://players/weapon.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 13.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 14 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.870588, 0.352941, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 1 )
hp = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="BufferJump" type="Timer" parent="."]
wait_time = 0.2

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.4

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="weaponPos" type="Position2D" parent="."]
position = Vector2( 0, 11 )

[node name="weapon" parent="weaponPos" instance=ExtResource( 3 )]
position = Vector2( 11, -9 )

[node name="hitbox" type="Area2D" parent="." groups=["player"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 1, 2 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="healthBar" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -18.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false

[connection signal="timeout" from="BufferJump" to="." method="_on_BufferJump_timeout"]
[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
